[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ctrlc = "3.2.3"
tokio = { version = "1.18.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
futures = "0.3.25"
